# timmy_survival

./: .gitignore  CMakeLists.txt  CMakePresets.json  README-ko.md  README.md  build.sh  timmy-survival.data  timmy-survival.html  timmy-survival.js  timmy-survival.wasm
assets/shaders/: world.frag  world.fs  world_web.frag
src/: main.cpp
src/Components/: BoxCollider.cpp  BoxCollider.hpp  CircleCollider.cpp  CircleCollider.hpp  EnemyAI.cpp  EnemyAI.hpp  Health.cpp  Health.hpp  Lifetime.cpp  Lifetime.hpp  Particle.cpp  Particle.hpp  PlayerController.cpp  PlayerController.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp  Velocity.cpp  Velocity.hpp
src/Components/Colliders/: BoxCollider.cpp  BoxCollider.hpp  CircleCollider.cpp  CircleCollider.hpp
src/Components/Effects/: DamageBurst.cpp  DamageBurst.hpp  DamageZone.cpp  DamageZone.hpp  LightningStrike.cpp  LightningStrike.hpp
src/Components/Movement/: Follow.cpp  Follow.hpp  FollowMovement.cpp  FollowMovement.hpp  Magnet.cpp  Magnet.hpp  Velocity.cpp  Velocity.hpp
src/Components/Render/: SpriteRenderer.cpp  SpriteRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp
src/Components/Weapons/: FireWeapon.cpp  FireWeapon.hpp  OrbitBlade.cpp  OrbitBlade.hpp  OrbitWeapon.cpp  OrbitWeapon.hpp  Projectile.cpp  Projectile.hpp
src/Core/: Collider.cpp  Collider.hpp  Component.hpp  Effect.hpp  Event.hpp  GameObject.hpp  Prefabs.cpp  Prefabs.hpp  Timer.cpp  Timer.hpp  Weapon.hpp  World.cpp  World.hpp
src/Core/Components/: BoxCollider.cpp  BoxCollider.hpp  CircleCollider.cpp  CircleCollider.hpp  Collider.cpp  Collider.hpp  DamageText.hpp  EnemyAI.cpp  EnemyAI.hpp  FireWeapon.hpp  Health.hpp  Knockback.hpp  LinearMovement.hpp  Magnet.hpp  Particle.hpp  PlayerController.cpp  PlayerController.hpp  Projectile.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Weapon.hpp
src/Managers/: CameraManager.cpp  CameraManager.hpp  GameManager.cpp  GameManager.hpp  PlayerProgression.hpp  ResourceManager.cpp  ResourceManager.hpp  ShopItemData.hpp  ShopTypes.hpp
src/Prefabs/: Animations.hpp  Enemy.hpp  Prefabs.cpp  Prefabs.hpp
src/Prefabs/Definitions/: Effects.hpp  Enemies.hpp  Projectiles.hpp  Sprites.hpp  Stages.hpp  Weapons.hpp
src/Prefabs/Types/: EffectDefinition.hpp  EnemyDefinition.hpp  ProjectileDefinition.hpp  SpritePreset.hpp  StageDefinition.hpp  WeaponDefinition.hpp
src/Utils/: MathUtils.cpp  MathUtils.hpp
